# docs/swagger.yaml
@@ -51,6 +51,8 @@ definitions:
         type: string
       price:
         type: string
+      service:
+        type: string
       sort:
         type: integer
       typ:
@@ -273,6 +275,25 @@ paths:
           schema:
             type: string
       summary: 意见反馈
+  /wx/login:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: '{}'
+        in: body
+        name: param
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":0,"data":{},"msg":"ok"}'
+          schema:
+            type: string
+      summary: 登录
   /wx/shifu:
     get:
       consumes:
